--- a/css/styles.css
+++ b/css/styles.css
@@ -43,13 +43,12 @@ ol {
   margin: 0;
   padding-left: 0;
 }
-.container {
+/* .container {
   width: 1158px;
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
-  /* outline: 2px solid red; */
-}
+} */
 .visually-hidden {
 position: absolute;
 width: 1px;
@@ -62,7 +61,70 @@ clip-path: inset (100%);
 clip: rect(0 0 0 0); overflow: hidden;}
 
 /* ==================== HEADER ==================== */
-.header {
+.logo {
+  font-family: "Raleway", sans-serif;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.16em;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--brand-color);
+}
+.studio {
+  color: var(--text-color);
+}
+.container{
+  padding-left: 16px;
+  padding-right: 16px;
+}
+@media screen and (min-width:480px) {
+  .container{
+    width: 426px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+@media screen and (min-width:768px) {
+  .container{
+    width: 736px;
+  }
+}
+@media screen and (min-width:1200px) {
+  .container{
+    width: 1160px;
+  }
+}
+.mobile-menu-open{
+  background-color: transparent;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* .header {
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -151,12 +213,12 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .contact-tel:hover,
 .contact-tel:focus {
   color: var(--brand-color);
-}
+} */
 
 /* ==================== /HEADER ==================== */
 
 /* ==================== HERO ==================== */
-.hero {
+/* .hero {
   max-width: 1440px;
   height: 600px;
   background-color: var(--headings-text-color);
@@ -216,7 +278,7 @@ clip: rect(0 0 0 0); overflow: hidden;}
 /* ==================== /HERO ==================== */
 
 /* ==================== ADVANTAGES ==================== */
-.advantages {
+/* .advantages {
   padding-top: 120px;
   padding-bottom: 120px;
 }
@@ -262,12 +324,12 @@ clip: rect(0 0 0 0); overflow: hidden;}
   letter-spacing: 0.02em;
   color: var(--headings-text-color);
   margin-bottom: 8px;
-}
+} */ */
 
 /* ==================== /ADVANTAGES ==================== */
 
 /* ==================== IMG-LIST ==================== */
-.img {
+/* .img {
   padding-bottom: 120px;
 }
 .img-list {
@@ -284,11 +346,11 @@ clip: rect(0 0 0 0); overflow: hidden;}
   color: var(--headings-text-color);
   text-align: center;
   margin-bottom: 72px;
-}
+} */
 /* ==================== /IMG-LIST ==================== */
 
 /* ==================== TEAM ==================== */
-.team {
+/* .team {
   background-color: #f4f4fd;
   padding-top: 120px;
   padding-bottom: 120px;
@@ -353,11 +415,11 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: #404bbf;
-}
+} */
 /* ==================== /TEAM ==================== */
 
 /* ==================== CUSTOMERS ==================== */
-.customers {
+/* .customers {
   padding-top: 130px;
   padding-bottom: 120px;
 }
@@ -404,12 +466,12 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .customers-link:hover .customers-icon,
 .customers-link:focus .customers-icon {
   fill: #404bbf;
-}
+} */
 
 /* ==================== /CUSTOMERS ==================== */
 
 /* ==================== FOOTER ==================== */
-
+/* 
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -536,13 +598,13 @@ margin-bottom: 16px;
   position: absolute;
   background-image: url(../images/send.svg);
   transform: translate(16px);
-}
+} */
 /* ==================== /FOOTER ==================== */
 
 /* ==================== PORTFOLIO PAGE ==================== */
 
 /* ==================== FILTER ==================== */
-.filter {
+/* .filter {
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -575,11 +637,11 @@ margin-bottom: 16px;
   background-color: var(--brand-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
+} */
 
 /* ==================== /FILTER ==================== */
 /* ==================== FILTER-IMG ==================== */
-
+/* 
 .card-portfolio {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -607,7 +669,7 @@ margin-bottom: 16px;
   transform: translateY(0%);
 }
 /* ---------- Slide Window ---------- */
-.img-wrap {
+/* .img-wrap {
   position: relative;
   overflow: hidden;
 }
@@ -633,7 +695,7 @@ margin-bottom: 16px;
   transition-timing-function: var(--animation-timing-function);
 }
 /* ---------- /Slide Window ---------- */
-.filter-img-item:hover,
+/* .filter-img-item:hover,
 .filter-img-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -658,15 +720,15 @@ margin-bottom: 16px;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--text-color);
-}
+  color: var(--text-color);} */
+
 
 /* ==================== /FILTER-IMG ==================== */
 /* ==================== /PORTFOLIO PAGE ==================== */
 
 /* ==================== OVERLAY ==================== */
 
-.overlay {
+/* .overlay {
   position: fixed;
   top: 0;
   width: 100%;
@@ -882,6 +944,6 @@ background-position: center;
   background-color: #404bbf;
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
+  border-radius: 4px; */
 
 /* ==================== /OVERLAY ==================== */
