--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ html {
 .link {
   text-decoration: none;
 }
-.picture {
+img {
   display: block;
 }
 body {
@@ -44,11 +44,13 @@ ol {
   padding-left: 0;
 }
 /* .container {
-  width: 1158px;
+  width: 1158px; 
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
 } */
+  /* outline: 2px solid red;*/
+
 .visually-hidden {
 position: absolute;
 width: 1px;
@@ -61,70 +63,7 @@ clip-path: inset (100%);
 clip: rect(0 0 0 0); overflow: hidden;}
 
 /* ==================== HEADER ==================== */
-.logo {
-  font-family: "Raleway", sans-serif;
-  font-weight: 800;
-  font-size: 18px;
-  line-height: 1.16em;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--brand-color);
-}
-.studio {
-  color: var(--text-color);
-}
-.container{
-  padding-left: 16px;
-  padding-right: 16px;
-}
-@media screen and (min-width:480px) {
-  .container{
-    width: 426px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-@media screen and (min-width:768px) {
-  .container{
-    width: 736px;
-  }
-}
-@media screen and (min-width:1200px) {
-  .container{
-    width: 1160px;
-  }
-}
-.mobile-menu-open{
-  background-color: transparent;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* .header {
+.header {
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -213,12 +152,12 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .contact-tel:hover,
 .contact-tel:focus {
   color: var(--brand-color);
-} */
+}
 
 /* ==================== /HEADER ==================== */
 
 /* ==================== HERO ==================== */
-/* .hero {
+.hero {
   max-width: 1440px;
   height: 600px;
   background-color: var(--headings-text-color);
@@ -278,58 +217,53 @@ clip: rect(0 0 0 0); overflow: hidden;}
 /* ==================== /HERO ==================== */
 
 /* ==================== ADVANTAGES ==================== */
-/* .advantages {
-  padding-top: 120px;
-  padding-bottom: 120px;
+.container{
+  width: 100%;
+  border: 1px solid red;
+  margin: 0 auto;
+  padding-left: 14px;
+  padding-right: 14px;
+}
+.advantages {
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .advantages-list {
-  display: flex;
   gap: 24px;
 }
 .advantages-title {
   display: none;
 }
-.list-element::before {
-  display: block;
-  content: "";
-  height: 112px;
-  background: #f4f4fd;
-  border-radius: 4px;
-  background-size: 64px 64px;
-  background-repeat: no-repeat;
-  background-position: center;
-  margin-bottom: 8px;
-}
-.icon-antenna::before {
-  background-image: url("../images/antenna.svg");
-}
-.icon-clock::before {
-  background-image: url("../images/clock.svg");
-}
-.icon-diagram::before {
-  background-image: url("../images/diagram.svg");
-}
-.icon-astronaut::before {
-  background-image: url("../images/astronaut.svg");
-}
-
 .list-element {
-  width: 264px;
+  width: 356px;
+  margin: 0 auto;
 }
-.list-element .list-title {
+.list-title {
   font-family: "Roboto", sans-serif;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 1.2;
-  letter-spacing: 0.02em;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 1.11em;
   color: var(--headings-text-color);
   margin-bottom: 8px;
-} */ */
+  text-align: center;
+}
+.list-text{
+font-family: 'Roboto', sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5em;
+letter-spacing: 0.02em;
+margin-bottom: 72px
+}
+.icon-astronaut .list-text{
+  margin-bottom: 0px;
+}
+
 
 /* ==================== /ADVANTAGES ==================== */
 
 /* ==================== IMG-LIST ==================== */
-/* .img {
+.img {
   padding-bottom: 120px;
 }
 .img-list {
@@ -346,11 +280,14 @@ clip: rect(0 0 0 0); overflow: hidden;}
   color: var(--headings-text-color);
   text-align: center;
   margin-bottom: 72px;
-} */
+}
 /* ==================== /IMG-LIST ==================== */
 
 /* ==================== TEAM ==================== */
-/* .team {
+.team .container{
+  width: 294px;
+}
+.team {
   background-color: #f4f4fd;
   padding-top: 120px;
   padding-bottom: 120px;
@@ -359,13 +296,11 @@ clip: rect(0 0 0 0); overflow: hidden;}
   text-align: center;
 }
 .team-list {
-  display: flex;
-  gap: 24px;
+  /* display: flex; */
 }
 .card {
   text-align: center;
-  margin-top: 32px;
-  margin-bottom: 32px;
+
 }
 .team-title {
   font-family: "Roboto", sans-serif;
@@ -378,14 +313,16 @@ clip: rect(0 0 0 0); overflow: hidden;}
   margin-bottom: 72px;
 }
 .teammate {
+  margin-top: 72px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .teammate-name {
+  margin-top: 32px;
   font-family: "Roboto", sans-serif;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 20px;
   line-height: 1.2;
   letter-spacing: 0.02em;
@@ -399,6 +336,9 @@ clip: rect(0 0 0 0); overflow: hidden;}
   display: flex;
   justify-content: center;
   gap: 24px;
+}
+.social-list-item{
+  margin-bottom: 32px;
 }
 .social-list-link {
   display: flex;
@@ -415,11 +355,11 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .social-list-link:hover,
 .social-list-link:focus {
   background-color: #404bbf;
-} */
+}
 /* ==================== /TEAM ==================== */
 
 /* ==================== CUSTOMERS ==================== */
-/* .customers {
+.customers {
   padding-top: 130px;
   padding-bottom: 120px;
 }
@@ -434,11 +374,18 @@ clip: rect(0 0 0 0); overflow: hidden;}
 }
 .customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  justify-content: center;
+  /* gap: 16px; */
 }
+
 .customers-item {
-  width: 168px;
+  width: 190px;
   height: 88px;
+  margin-bottom: 72px;
+}
+.customers-item:nth-child(2n){
+  margin-left: 16px;
 }
 .customers-link {
   width: 100%;
@@ -466,12 +413,12 @@ clip: rect(0 0 0 0); overflow: hidden;}
 .customers-link:hover .customers-icon,
 .customers-link:focus .customers-icon {
   fill: #404bbf;
-} */
+}
 
 /* ==================== /CUSTOMERS ==================== */
 
 /* ==================== FOOTER ==================== */
-/* 
+
 .footer {
   padding-top: 100px;
   padding-bottom: 100px;
@@ -598,13 +545,13 @@ margin-bottom: 16px;
   position: absolute;
   background-image: url(../images/send.svg);
   transform: translate(16px);
-} */
+}
 /* ==================== /FOOTER ==================== */
 
 /* ==================== PORTFOLIO PAGE ==================== */
 
 /* ==================== FILTER ==================== */
-/* .filter {
+.filter {
   padding-top: 96px;
   padding-bottom: 120px;
 }
@@ -637,11 +584,11 @@ margin-bottom: 16px;
   background-color: var(--brand-color);
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-} */
+}
 
 /* ==================== /FILTER ==================== */
 /* ==================== FILTER-IMG ==================== */
-/* 
+
 .card-portfolio {
   padding-top: 32px;
   padding-bottom: 32px;
@@ -669,7 +616,7 @@ margin-bottom: 16px;
   transform: translateY(0%);
 }
 /* ---------- Slide Window ---------- */
-/* .img-wrap {
+.img-wrap {
   position: relative;
   overflow: hidden;
 }
@@ -695,7 +642,7 @@ margin-bottom: 16px;
   transition-timing-function: var(--animation-timing-function);
 }
 /* ---------- /Slide Window ---------- */
-/* .filter-img-item:hover,
+.filter-img-item:hover,
 .filter-img-item:focus {
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
@@ -720,15 +667,15 @@ margin-bottom: 16px;
   font-family: "Roboto", sans-serif;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: var(--text-color);} */
-
+  color: var(--text-color);
+}
 
 /* ==================== /FILTER-IMG ==================== */
 /* ==================== /PORTFOLIO PAGE ==================== */
 
 /* ==================== OVERLAY ==================== */
 
-/* .overlay {
+.overlay {
   position: fixed;
   top: 0;
   width: 100%;
@@ -944,6 +891,6 @@ background-position: center;
   background-color: #404bbf;
   cursor: pointer;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px; */
+  border-radius: 4px;
 
 /* ==================== /OVERLAY ==================== */
