--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,7 +1,5 @@
 @media screen and (min-width: 1200px) {
   .advantages {
-    margin-top: 120px;
-    margin-bottom: 120px;
   }
   .container {
     width: 1164px;
@@ -43,5 +41,20 @@
   }
   .team .container {
     width: 1164px;
+  }
+  .hero-title {
+    margin-bottom: 48px;
+  }
+  .contact-menu {
+    display: flex;
+    gap: 40px;
+    line-height: 1.5em;
+  }
+  .menu-item {
+    padding-top: 24px;
+    padding-bottom: 28px;
+  }
+  .services {
+    display: block;
   }
 }
