--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,8 +1,4 @@
 @media screen and (min-width: 768px) {
-  .advantages {
-    margin-top: 96px;
-    margin-bottom: 96px;
-  }
   .container {
     width: 768px;
   }
@@ -43,5 +39,69 @@
   }
   .customers-item:nth-child(2n) {
     margin-left: 0px;
+  }
+  .hero-title {
+    font-size: 56px;
+    line-height: 1.07em;
+    margin-bottom: 40px;
+  }
+  .menu-btn {
+    display: none;
+  }
+  .menu-item {
+    display: block;
+    position: relative;
+    font-family: "Roboto", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5em;
+    color: var(--headings-text-color);
+    padding-top: 24px;
+    padding-bottom: 22px;
+  }
+  .current {
+    color: var(--brand-color);
+  }
+  .menu-item.current::after {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: var(--brand-color);
+    left: 0px;
+    bottom: 0px;
+  }
+  .contact-mail,
+  .contact-tel {
+    font-family: "Roboto";
+    font-size: 12px;
+    line-height: 1.33em;
+    color: #434455;
+  }
+
+  .main-nav {
+  }
+  .nav {
+    display: flex;
+  }
+  .menu-btn-open {
+    display: none;
+  }
+  .header {
+    padding: 0;
+  }
+
+  .menu {
+    display: flex;
+    gap: 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header .menu {
+    display: none;
+  }
+  .header .contact-menu {
+    display: none;
   }
 }
