--- a/css/tablet.css
+++ b/css/tablet.css
@@ -97,6 +97,20 @@
     display: flex;
     gap: 40px;
   }
+  /* ========== HERO ========== */
+  .hero {
+    background-image: var(--gradient), url(../images/office-tab.jpg);
+  }
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: var(--gradient), url("../images/office-tab@2x.jpg");
+    }
+  }
+
+  /* ========== /HERO ========== */
+
   /* ========== FOOTER ========== */
   .footer-block-top {
     display: flex;
