--- a/css/styles.css
+++ b/css/styles.css
@@ -451,7 +451,7 @@ ol {
   margin: 0 auto;
   margin-top: 16px;
   margin-bottom: 72px;
-  min-width: 269px;
+  width: 269px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   line-height: 1.5em;
@@ -529,7 +529,7 @@ ol {
 }
 .footer-btn {
   position: relative;
-  min-width: 165px;
+  width: 165px;
   height: 40px;
   display: inline-block;
   background-color: var(--brand-color);
