--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ ol {
   border-color: transparent;
   margin-left: auto;
   padding: 0;
+  fill: #2e2f42;
 }
 
 /* ==================== HEADER ==================== */
