--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,7 @@ ol {
   border-color: transparent;
   margin-left: auto;
   padding: 0;
+  stroke: #2e2f42;
   fill: #2e2f42;
 }
 
@@ -164,11 +165,13 @@ ol {
 
 /* ==================== HERO ==================== */
 .hero {
+  display: flex;
+  align-items: center;
   max-width: 1440px;
   height: 600px;
   background-color: var(--headings-text-color);
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
   margin-left: auto;
   margin-right: auto;
   background-image: var(--gradient), url(../images/office-mob.jpg);
@@ -209,7 +212,7 @@ ol {
   line-height: 1.5em;
   letter-spacing: 0.04em;
   border-radius: 4px;
-  padding: 16px, 32px;
+  /* padding: 16px, 32px; */
   border: 1px solid transparent;
   transition-property: background-color;
   transition-duration: var(--animation-duration);
