--- a/css/styles.css
+++ b/css/styles.css
@@ -20,9 +20,9 @@ html {
 .link {
   text-decoration: none;
 }
-.picture {
+/* .picture {
   width: 100%;
-}
+} */
 img {
   display: block;
 }
@@ -249,6 +249,7 @@ ol {
 .list-element {
   width: 356px;
   margin: 0 auto;
+  margin-bottom: 72px;
 }
 .list-title {
   font-family: "Roboto", sans-serif;
@@ -265,7 +266,6 @@ ol {
   font-size: 16px;
   line-height: 1.5em;
   letter-spacing: 0.02em;
-  margin-bottom: 72px;
 }
 .icon-astronaut .list-text {
   margin-bottom: 0px;
@@ -298,11 +298,14 @@ ol {
 /* ==================== TEAM ==================== */
 .team .container {
   min-width: 294px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .team {
   background-color: #f4f4fd;
-  padding-top: 120px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 128px;
 }
 .team-title {
   text-align: center;
@@ -312,6 +315,7 @@ ol {
 }
 .card {
   text-align: center;
+  width: 264px;
 }
 .team-title {
   font-family: "Roboto", sans-serif;
@@ -321,9 +325,10 @@ ol {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--headings-text-color);
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
 }
 .teammate {
+  width: 264px;
   margin-top: 72px;
   background-color: #ffffff;
   border-radius: 0px 0px 4px 4px;
@@ -371,8 +376,8 @@ ol {
 
 /* ==================== CUSTOMERS ==================== */
 .customers {
-  padding-top: 130px;
-  padding-bottom: 120px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 }
 .customers-title {
   font-family: "Roboto", sans-serif;
@@ -387,17 +392,20 @@ ol {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* gap: 16px; */
+  gap: 16px;
+  row-gap: 72px;
 }
 
 .customers-item {
   width: 190px;
   height: 88px;
-  margin-bottom: 72px;
+  /* gap: 16px 72px; */
+
+  /* margin-bottom: 72px; */
 }
-.customers-item:nth-child(2n) {
+/* .customers-item:nth-child(2n) {
   margin-left: 16px;
-}
+} */
 .customers-link {
   width: 100%;
   height: 100%;
@@ -448,13 +456,15 @@ ol {
 .footer-studio {
   color: #f4f4fd;
 }
-
+.footer-block-logo {
+  margin-bottom: 72px;
+}
 .footer-text {
   /* align-items: center; */
   text-align: left;
   margin: 0 auto;
   margin-top: 16px;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
   width: 269px;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -463,6 +473,7 @@ ol {
 .footer-media {
   /* text-align: start; */
   /* margin-left: 120px; */
+  margin-bottom: 72px;
 }
 .media-title {
   font-family: "Roboto", sans-serif;
@@ -475,7 +486,7 @@ ol {
 .media-list {
   display: flex;
   justify-content: center;
-  margin-bottom: 72px;
+  /* margin-bottom: 72px; */
   gap: 16px;
 }
 .media-link {
