--- a/css/desktop.css
+++ b/css/desktop.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 1200px) {
   .advantages {
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
   .container {
     width: 1164px;
@@ -12,6 +14,7 @@
   }
   .list-element {
     width: 264px;
+    margin-bottom: 0px;
   }
   .list-text {
     font-weight: 400;
@@ -28,6 +31,11 @@
     margin-bottom: 8px;
   }
   /* ========== HERO ========== */
+  .hero {
+    padding-top: 188px;
+    padding-bottom: 188px;
+    height: 600px;
+  }
   .hero {
     background-image: var(--gradient), url(../images/office.jpg);
   }
@@ -77,7 +85,7 @@
   }
   /* FOOTER */
   .footer {
-    padding-bottom: 0;
+    padding-bottom: 100px;
   }
   .footer .container {
     display: flex;
@@ -98,6 +106,8 @@
   .email-input {
     margin: 0;
   }
-
+  .footer-block-top {
+    margin-bottom: 0;
+  }
   /* / FOOTER */
 }
